fix: Break word on rich text, overflow

--- a/assets/scss/layout/_richtext.scss
+++ b/assets/scss/layout/_richtext.scss
@@ -39,6 +39,13 @@
 		}
 	}
 
+	// Links
+	// ==========================================================================
+
+	a {
+		word-break: break-all;
+	}
+
 	// Images
 	// ==========================================================================
 
